k8s/front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc-vlatest
spec:
  selector:
    type: frontend
    version: latest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
